--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
     </div>
 
     <main class="container">
-      <!-- Banner popup (ONLY shown on My Links / Analytics when NOT connected) -->
-     
-
       <!-- HOME -->
       <section id="view-home" class="view is-visible" aria-label="Home">
         <div class="hero-centered">
@@ -96,7 +93,7 @@
             <!-- Overlay has NO button, and ONLY appears when disconnected -->
             <div id="revealOverlay" class="reveal-overlay" role="group" aria-label="Connect to reveal links">
               <div class="reveal-box">
-                <div class="reveal-title">Links are partially hidden</div>
+                <div class="reveal-title">Links are hidden</div>
                 <div class="reveal-sub">
                   Connect your wallet to reveal full website names and full URLs.
                 </div>
@@ -240,8 +237,8 @@
               You bring the traffic. We provide the websites. We handle payouts.
             </div>
             <div class="how-hero-sub">
-              Users choose from partner crypto platforms, promote using their affiliate link,
-              and earn a split on revenue. Payments are processed and sent in crypto within 24 hours.
+              Choose a partner site, generate your affiliate link, and promote it. When users convert, revenue is split automatically.
+              Payouts are processed and sent in crypto within 24 hours.
             </div>
 
             <div class="how-highlight">
@@ -253,44 +250,44 @@
             </div>
           </div>
 
-          <div class="how-steps">
-            <div class="how-step">
-              <div class="how-step-num">01</div>
-              <div class="how-step-body">
-                <div class="how-step-title">Connect wallet</div>
-                <div class="how-step-text">
-                  Connect Phantom to unlock partner visibility and dashboard features.
-                </div>
+          <div class="how-grid">
+            <div class="how-card">
+              <div class="how-card-top">
+                <div class="how-chip">01</div>
+                <div class="how-card-title">Connect Phantom</div>
+              </div>
+              <div class="how-card-text">
+                Connect your wallet to unlock partner visibility and dashboard tools.
               </div>
             </div>
 
-            <div class="how-step">
-              <div class="how-step-num">02</div>
-              <div class="how-step-body">
-                <div class="how-step-title">Choose partner websites</div>
-                <div class="how-step-text">
-                  Browse curated crypto platforms and generate your affiliate link for each offer.
-                </div>
+            <div class="how-card">
+              <div class="how-card-top">
+                <div class="how-chip">02</div>
+                <div class="how-card-title">Pick partner sites</div>
+              </div>
+              <div class="how-card-text">
+                Browse curated crypto platforms and choose offers that fit your audience.
               </div>
             </div>
 
-            <div class="how-step">
-              <div class="how-step-num">03</div>
-              <div class="how-step-body">
-                <div class="how-step-title">Promote and earn</div>
-                <div class="how-step-text">
-                  Share your link. When users convert, revenue is tracked and split automatically.
-                </div>
+            <div class="how-card">
+              <div class="how-card-top">
+                <div class="how-chip">03</div>
+                <div class="how-card-title">Share your link</div>
+              </div>
+              <div class="how-card-text">
+                Post and promote your affiliate link. Track clicks and performance in Analytics.
               </div>
             </div>
 
-            <div class="how-step">
-              <div class="how-step-num">04</div>
-              <div class="how-step-body">
-                <div class="how-step-title">Crypto payout within 24 hours</div>
-                <div class="how-step-text">
-                  We process earnings and send crypto to your connected wallet within 24 hours.
-                </div>
+            <div class="how-card">
+              <div class="how-card-top">
+                <div class="how-chip">04</div>
+                <div class="how-card-title">Get paid in crypto</div>
+              </div>
+              <div class="how-card-text">
+                We process earnings and send crypto to your connected wallet within 24 hours.
               </div>
             </div>
           </div>
