--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h1 class="brand-title">LinkCryptVault</h1>
 
         <div class="header-actions">
+          <!-- Only visible when connected -->
           <button id="disconnectBtn" class="btn btn-ghost btn-header" type="button" hidden>
             Disconnect
           </button>
@@ -61,13 +62,13 @@
           </p>
 
           <div class="hero-actions-centered" id="homeActionsWrap">
-            <!-- Shown only until pressed (then replaced by upgrade button) -->
+            <!-- Disappears once wallet is connected -->
             <button id="connectStartBtn" class="btn btn-glow" type="button">
               <span class="btn-shine" aria-hidden="true"></span>
               Connect Wallet to Reveal Links
             </button>
 
-            <!-- Appears after Connect button is pressed; clicking hides it too -->
+            <!-- Remains after connect (and can be clicked to dismiss itself) -->
             <button id="upgradeBtn" class="btn btn-upgrade" type="button" hidden>
               $399 for 95% commission
               <span class="btn-arrow" aria-hidden="true">→</span>
@@ -118,7 +119,6 @@
               </table>
             </div>
 
-            <!-- Overlay has NO button, and ONLY appears when disconnected -->
             <div id="revealOverlay" class="reveal-overlay" role="group" aria-label="Connect to reveal links">
               <div class="reveal-box">
                 <div class="reveal-title">Links are hidden</div>
@@ -284,7 +284,7 @@
             <div class="how-card">
               <div class="how-card-top">
                 <div class="how-chip">01</div>
-                <div class="how-card-title">Connect Phantom</div>
+                <div class="how-card-title">Connect wallet</div>
               </div>
               <div class="how-card-text">
                 Connect your wallet to unlock partner visibility and affiliate tools.
@@ -304,10 +304,10 @@
             <div class="how-card">
               <div class="how-card-top">
                 <div class="how-chip">03</div>
-                <div class="how-card-title">Smart-contract enforced split</div>
+                <div class="how-card-title">Smart-contract enforcement</div>
               </div>
               <div class="how-card-text">
-                Revenue splits are enforced by smart contracts — the payout rules can’t be changed or bypassed.
+                Revenue splits and payouts are enforced by smart contracts — the rules can’t be changed or bypassed.
               </div>
             </div>
 
@@ -339,7 +339,7 @@
           <span>LinkCryptVault</span>
         </div>
         <div class="footer-right">
-          <span class="footer-muted">Dark UI • Phantom connect • Affiliate dashboard</span>
+          <span class="footer-muted">Dark UI • Wallet connect • Affiliate dashboard</span>
         </div>
       </div>
     </footer>
