--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       <div class="orb orb-c"></div>
     </div>
 
-    <!-- Main header: title far-left, connect/disconnect far-right -->
     <header class="header">
       <div class="header-inner header-inner-wide">
         <h1 class="brand-title">LinkCryptVault</h1>
 
         <div class="header-actions">
-          <!-- Only visible when "connected" -->
+          <!-- MUST never show unless connected -->
           <button id="disconnectBtn" class="btn btn-ghost btn-header" type="button" hidden>
             Disconnect
           </button>
@@ -34,7 +33,6 @@
       </div>
     </header>
 
-    <!-- Tabs BELOW main header, on background -->
     <div class="tabs-bar">
       <div class="tabs-inner">
         <nav class="nav nav-centered" aria-label="Primary">
@@ -48,7 +46,6 @@
     </div>
 
     <main class="container">
-      <!-- HOME -->
       <section id="view-home" class="view is-visible" aria-label="Home">
         <div class="hero-centered">
           <h2 class="hero-title">
@@ -61,14 +58,14 @@
             unwanted audiences. Payouts and splits are enforced using <span class="accent2">smart contracts</span>.
           </p>
 
-          <!-- Disconnected: show BOTH buttons.
-               Connected: show ONLY upgrade button, centered. -->
           <div class="hero-actions-centered hero-actions-duo" id="homeActionsWrap">
+            <!-- This button will be REMOVED from DOM once connected -->
             <button id="connectStartBtn" class="btn btn-glow" type="button">
               <span class="btn-shine" aria-hidden="true"></span>
               Connect Wallet to Reveal Links
             </button>
 
+            <!-- Always visible. If clicked while disconnected => modal -->
             <button id="upgradeBtn" class="btn btn-upgrade" type="button">
               $399 for 95% commission
               <span class="btn-arrow" aria-hidden="true">→</span>
@@ -135,13 +132,10 @@
         </div>
       </section>
 
-      <!-- MY LINKS -->
       <section id="view-links" class="view" aria-label="My Links">
         <div class="page-head">
           <h2 class="page-title">My Links</h2>
-          <p class="page-subtitle">
-            Your chosen affiliate links will appear here once you’ve selected partners.
-          </p>
+          <p class="page-subtitle">Your chosen affiliate links will appear here once you’ve selected partners.</p>
         </div>
 
         <div class="panel">
@@ -151,13 +145,10 @@
         </div>
       </section>
 
-      <!-- ANALYTICS -->
       <section id="view-analytics" class="view" aria-label="Analytics">
         <div class="page-head">
           <h2 class="page-title">Analytics</h2>
-          <p class="page-subtitle">
-            Performance overview with clean visuals and structured tables.
-          </p>
+          <p class="page-subtitle">Performance overview with clean visuals and structured tables.</p>
         </div>
 
         <div class="analytics-grid">
@@ -250,13 +241,10 @@
         </div>
       </section>
 
-      <!-- HOW IT WORKS -->
       <section id="view-how" class="view" aria-label="How it works">
         <div class="page-head">
           <h2 class="page-title">How it works</h2>
-          <p class="page-subtitle">
-            Clear affiliate flow, enforced split, fast crypto payouts.
-          </p>
+          <p class="page-subtitle">Clear affiliate flow, enforced split, fast crypto payouts.</p>
         </div>
 
         <div class="how-modern">
@@ -286,9 +274,7 @@
                 <div class="how-chip">01</div>
                 <div class="how-card-title">Connect wallet</div>
               </div>
-              <div class="how-card-text">
-                Connect your wallet to unlock partner visibility and affiliate tools.
-              </div>
+              <div class="how-card-text">Connect your wallet to unlock partner visibility and affiliate tools.</div>
             </div>
 
             <div class="how-card">
@@ -296,9 +282,7 @@
                 <div class="how-chip">02</div>
                 <div class="how-card-title">Generate your link</div>
               </div>
-              <div class="how-card-text">
-                Use the Generate button next to a partner to create your affiliate link instantly.
-              </div>
+              <div class="how-card-text">Use the Generate button next to a partner to create your affiliate link instantly.</div>
             </div>
 
             <div class="how-card">
@@ -306,9 +290,7 @@
                 <div class="how-chip">03</div>
                 <div class="how-card-title">Smart-contract enforcement</div>
               </div>
-              <div class="how-card-text">
-                Revenue splits and payouts are enforced by smart contracts — the rules can’t be changed or bypassed.
-              </div>
+              <div class="how-card-text">Revenue splits and payouts are enforced by smart contracts — the rules can’t be bypassed.</div>
             </div>
 
             <div class="how-card">
@@ -316,9 +298,7 @@
                 <div class="how-chip">04</div>
                 <div class="how-card-title">Crypto payout within 24 hours</div>
               </div>
-              <div class="how-card-text">
-                Earnings are processed and sent to your connected wallet in crypto within 24 hours.
-              </div>
+              <div class="how-card-text">Earnings are processed and sent to your connected wallet in crypto within 24 hours.</div>
             </div>
           </div>
 
@@ -332,7 +312,7 @@
       </section>
     </main>
 
-    <!-- Upgrade requires wallet modal -->
+    <!-- Modal: only for clicking $399 while disconnected -->
     <div id="walletModal" class="modal" aria-hidden="true">
       <div class="modal-backdrop" data-modal-close="true"></div>
       <div class="modal-card" role="dialog" aria-modal="true" aria-label="Connect wallet required">
@@ -340,9 +320,7 @@
           <div class="modal-title">Wallet required</div>
           <button class="modal-x" type="button" data-modal-close="true" aria-label="Close">✕</button>
         </div>
-        <div class="modal-sub">
-          You need to connect your wallet to continue.
-        </div>
+        <div class="modal-sub">You need to connect your wallet to continue.</div>
         <div class="modal-actions">
           <button id="modalConnectBtn" class="btn btn-primary" type="button">
             <span class="btn-dot" aria-hidden="true"></span>
